tests/ui/const-generics/type-dependent/issue-71382.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-71382.rs:12:23
   |
LL |     fn test<const FN: fn() -> u8>(&self) -> u8 {
   |                       ^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: aborting due to 1 previous error

